--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qdoc",
-  "version": "0.1",
+  "version": "0.1.0",
   "description": "Quick Whatever-to-HTML doc generator",
   "main": "src/qdoc.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "fs.extra": "^1.2.1",
     "marked": "^0.3.2",
     "node-watch": "^0.3.4",
+    "open": "0.0.5",
     "ws": "^0.4.32"
   }
 }
